Trigger GitHub Pages rebuild

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <div class="download">
-        <a class="download-link" href="static/builds/Build 0.1.rar" download>
+        <a class="download-link" href="static/builds/Build_0.1.rar" download>
             Rybalka билд 0.1
         </a>
     </div>
