--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     </div>
 
     <div class="download">
-        <a href="https://github.com/Zuza228355/site-rybalka/raw/refs/heads/main/static/Builds/Build_0.1.rar" download>
-            Rybalka билд 0.1
+        <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.1.rar" download>
+            Rybalka билд 0.1 
         </a>
     </div>
 
