--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
             Rybalka билд 0.1 
         </a>
     </div>
+	
+	<div class="download">
+        <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build 0.2.rar" download>
+            Rybalka билд 0.2 
+        </a>
+    </div>
 
     <div class="simple-text">
         <p>О нашей игре:</p>
