--- a/index2.html
+++ b/index2.html
@@ -57,20 +57,19 @@
     <div class="text-blue">
         <h1>Obama Gamings представляет!</h1>
     </div>
+	<div class="simple-text">
+        Данный билд я вляется самым нестабильным из всех
+    </div>
 
     <div class="simple-text">
         Скачать игру:
     </div>
 
-    <div class="download">
-        <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.1.rar" download class="download-link">
-            Rybalka билд 0.1
-        </a>
-    </div>
-	
-	<a href="index2.html">
-	    Страница build 0.2
-	</a>
+    <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.2.rar" download class="download-link">
+        Rybalka билд 0.2
+    </a>
+
+
 
     <div class="simple-text">
         <p>О нашей игре:</p>
@@ -80,28 +79,28 @@
         Красивые виды
     </div>
     <div>
-        <img src="static/images/img1.png" alt="Красивые виды">
+        <img src="static/images/build2_img2.png" alt="Красивые виды">
     </div>
 
     <div class="simple-text">
-        Проработанные модели
+        Добавлена урановая шахта
     </div>
     <div>
-        <img src="static/images/img2.png" alt="Проработанные модели">
+        <img src="static/images/build2_img3.png" alt="Проработанные модели">
     </div>
 
     <div class="simple-text">
         Проработанная физика
     </div>
     <div>
-        <img src="static/images/img3.png" alt="Проработанная физика">
+        <img src="static/images/build2_img1.png" alt="Проработанная физика">
     </div>
 
     <div class="simple-text">
-        Глубокий сюжет
+        Вкусная рыба
     </div>
     <div>
-        <img src="static/images/img4.png" alt="Глубокий сюжет">
+        <img src="static/images/build2_img4.png" alt="Глубокий сюжет">
     </div>
 
     <div class="text-small">
