--- a/index2.html
+++ b/index2.html
@@ -57,6 +57,9 @@
     <div class="text-blue">
         <h1>Obama Gamings представляет!</h1>
     </div>
+	<a href="index.html">
+	    Страница build 0.2
+	</a>
 	<div class="simple-text">
         Данный билд я вляется самым нестабильным из всех
     </div>
