--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
     <div class="text-small">
         При поддержке ООО Obama Gamings Corp.
     </div>
+	
+	<a href="obama.html">
+	    Официальная страница Obama Gamings Cororporation
+	</a>
 
     <div>
         <img src="static/images/ObamaImage.jpg" alt="Obama Gamings Logo">
