--- a/index2.html
+++ b/index2.html
@@ -60,9 +60,14 @@
 	<a href="index.html">
 	    Страница build 0.1
 	</a>
-	<div class="simple-text">
-        Данный билд является самым нестабильным из всех
-    </div>
+	
+	<a href="index.html">
+	    Страница build 0.3
+	</a>
+	
+	<a href="index.html">
+	    Страница build 0.4
+	</a>
 
     <div class="simple-text">
         Скачать игру:
