--- a/obama.html
+++ b/obama.html
@@ -25,7 +25,7 @@
 	</div>
 	
 	<div>
-        <img src="static/images/obamaPage.jpg" alt="Obama Gamings Logo">
+        <img src="static/images/ObamaImage.jpg" alt="Obama Gamings Logo">
 		<br><br>
     </div>
 	
@@ -34,13 +34,17 @@
 	    <p>
 		    Счастливые сотрудники!
 		</p>
+		<br>
 	</div>
 	<div>
         <img src="static/images/obamaPage.jpg" alt="obama">
     </div>
 	
 	<div class="simple-text">
-	    Психически здоровые работники1
+	    <p>
+	        Психически здоровые работники!
+		</p>
+		<br>
 	</div>
 	
 	<div>
