--- a/obama.html
+++ b/obama.html
@@ -8,6 +8,7 @@
             src: url('static/Scabber.ttf') format('truetype');
         }
 		.simple-text{
+		    text-align: center;
 		    font-size: 30px
 		}
 	    .obama-text{
@@ -36,7 +37,7 @@
 		</p>
 		<br>
 	</div>
-	<div>
+	<div style="width: 300px; margin: 0 auto;">
         <img src="static/images/obamaPage.jpg" alt="obama">
     </div>
 	
