--- a/obama.html
+++ b/obama.html
@@ -25,7 +25,7 @@
 		</h1>
 	</div>
 	
-	<div>
+	<div style="width: 300px; margin: 0 auto;">
         <img src="static/images/ObamaImage.jpg" alt="Obama Gamings Logo">
 		<br><br>
     </div>
@@ -48,7 +48,7 @@
 		<br>
 	</div>
 	
-	<div>
+	<div style="width: 300px; margin: 0 auto;">
         <img src="static/images/obamaPage1.jpg" alt="obama1">
     </div>
 </body>
