--- a/obama.html
+++ b/obama.html
@@ -12,9 +12,14 @@
 		    font-size: 30px
 		}
 	    .obama-text{
+		    text-align: center;
 		    color: rgb(0, 50, 0);
 		    font-family: 'Scabber';
 		    font-size: 30px;
+		}
+		.img-people{
+		    width: 500px;
+			height: auto;
 		}
 	</style>
 </head>
