--- a/obama.html
+++ b/obama.html
@@ -42,7 +42,7 @@
 		</p>
 		<br>
 	</div>
-	<div style="width: 300px; margin: 0 auto;">
+	<div class="img-people">
         <img src="static/images/obamaPage.jpg" alt="obama">
     </div>
 	
@@ -53,7 +53,7 @@
 		<br>
 	</div>
 	
-	<div style="width: 300px; margin: 0 auto;">
+	<div class="img-people">
         <img src="static/images/obamaPage1.jpg" alt="obama1">
     </div>
 </body>
