--- a/obama.html
+++ b/obama.html
@@ -17,44 +17,64 @@
 		    font-family: 'Scabber';
 		    font-size: 30px;
 		}
-		.img-people{
-		    width: 500px;
-			height: auto;
-		}
+		.img-people {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 20px 0;
+        }
+        .img-people img {
+            display: block;
+        }
 	</style>
 </head>
 <body>
     <div class="obama-text">
 	    <h1>
-		    Obama Gamings corp. 
+		    Obama Gamings corp.
 		</h1>
 	</div>
 	
-	<div style="width: 300px; margin: 0 auto;">
+	<div class="img-people">
         <img src="static/images/ObamaImage.jpg" alt="Obama Gamings Logo">
-		<br><br>
-    </div>
+	</div>
+	
+	<div style="font-size: 40px; text-align: center;" >
+		<p>
+		    О нас:
+		</p>
+	</div>
 	
 	<div class="simple-text">
-	    <br><br>
 	    <p>
 		    Счастливые сотрудники!
 		</p>
-		<br>
 	</div>
+
 	<div class="img-people">
         <img src="static/images/obamaPage.jpg" alt="obama">
     </div>
 	
 	<div class="simple-text">
 	    <p>
-	        Психически здоровые работники!
+		    Психически здоровые работники!
 		</p>
-		<br>
 	</div>
-	
+
+	<div class="img-people">
+        <img src="static/images/obamaPage2.jpg" alt="obama1">
+    </div>
+
+	<div class="simple-text">
+	    <p>
+		    Игорь — ведущий специалист нашей компании!
+		</p>
+	</div>
+
 	<div class="img-people">
         <img src="static/images/obamaPage1.jpg" alt="obama1">
     </div>
+
 </body>
 </html>
