--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
 	
 	<a href="obama.html">
-	    Официальная страница Obama Gamings Cororporation
+	    Официальная страница Obama Gamings Corporation
 	</a>
 
     <div>
