--- a/index2.html
+++ b/index2.html
@@ -60,14 +60,6 @@
 	<a href="index.html">
 	    Страница build 0.1
 	</a>
-	
-	<a href="index.html">
-	    Страница build 0.3
-	</a>
-	
-	<a href="index.html">
-	    Страница build 0.4
-	</a>
 
     <div class="simple-text">
         Скачать игру:
@@ -114,6 +106,10 @@
     <div class="text-small">
         При поддержке ООО Obama Gamings Corp.
     </div>
+	
+	<a href="obama.html">
+	    Официальная страница Obama Gamings Corporation
+	</a>
 
     <div>
         <img src="static/images/ObamaImage.jpg" alt="Obama Gamings Logo">
