--- a/index2.html
+++ b/index2.html
@@ -57,6 +57,12 @@
     <div class="text-blue">
         <h1>Obama Gamings представляет!</h1>
     </div>
+	
+	<a href="victoBuilds.html">
+	    <br>
+	    Victo билды
+	</a>
+	
 	<a href="index.html">
 	    Страница build 0.1
 	</a>
