--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
     <div class="text-blue">
         <h1>Obama Gamings представляет!</h1>
     </div>
+	
+	<a href="victoBuilds.html">
+	    <br>
+	    Victo билды
+	</a>
 
     <div class="simple-text">
         Скачать игру:
