--- a/victoBuilds.html
+++ b/victoBuilds.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <meta charset="UTF-8">
+    <title>Obama Gamings</title>
     .simple-text{
 	    fonr-size: 30px;
 	}
@@ -11,7 +13,7 @@
 	</div>
 	<div class="download">
         <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/victoBuild.rar" download class="download-link">
-            Rybalka билд 0.1
+            Rybalka VictoBuild
         </a>
     </div>
 	<div class="simple-text">
