Ultimate Fishing VI

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 
     <div class="download">
         <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.1.rar" download class="download-link">
-            Rybalka билд 0.1
+            Ultimate Fishing VI билд 0.1
         </a>
     </div>
 	
 	<a href="index2.html">
-	    Страница build 0.2
+	    Страница Ultimate Fishing VI build 0.2
 	</a>
 
     <div class="simple-text">
