--- a/index2.html
+++ b/index2.html
@@ -64,7 +64,7 @@
 	</a>
 	
 	<a href="index.html">
-	    Страница build 0.1
+	    Страница Ultimate Fishing VI build 0.1
 	</a>
 
     <div class="simple-text">
@@ -72,7 +72,7 @@
     </div>
 
     <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.2.rar" download class="download-link">
-        Rybalka билд 0.2
+        Ultimate Fishing VI билд 0.2
     </a>
 
 
