--- a/victoBuilds.html
+++ b/victoBuilds.html
@@ -2,21 +2,32 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Obama Gamings</title>
-    .simple-text{
-	    fonr-size: 30px;
-	}
+    <title>Victo builds</title>
+	<style>
+        .simple-text{
+	        fonr-size: 30px;
+	    }
+		
+		.obama{
+		    color: rgb(0, 50, 0)
+			font-size: 50px;
+		}
+	</style>
 </head>
 <body>
     <div class="simple-text">
-	    Лучшие билды
+	    <h1>
+	        Лучшие билды
+		</h1>
 	</div>
 	<div class="download">
         <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/victoBuild.rar" download class="download-link">
             Rybalka VictoBuild
         </a>
     </div>
-	<div class="simple-text">
-        При поддержке ООО Obama Gamings Corp.
+	<div class="obama">
+	    <p>
+            При поддержке ООО Obama Gamings Corp.
+		</p>
     </div>
 </body>
