--- a/index2.html
+++ b/index2.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="text-blue">
-        <h1>Obama Gamings представляет!</h1>
+        <h1>Obuma Gamings представляет!</h1>
     </div>
 	
 	<a href="victoBuilds.html">
@@ -64,7 +64,7 @@
 	</a>
 	
 	<a href="index.html">
-	    Страница Ultimate Fishing VI build 0.1
+	    Страница Stranded Fishing VI build 0.1
 	</a>
 
     <div class="simple-text">
@@ -72,7 +72,7 @@
     </div>
 
     <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.2.rar" download class="download-link">
-        Ultimate Fishing VI билд 0.2
+        Stranded Fishing VI билд 0.2
     </a>
 
 
@@ -110,11 +110,11 @@
     </div>
 
     <div class="text-small">
-        При поддержке ООО Obama Gamings Corp.
+        При поддержке ООО Obuma Gamings Corp.
     </div>
 	
 	<a href="obama.html">
-	    Официальная страница Obama Gamings Corporation
+	    Официальная страница Obuma Gamings Corporation
 	</a>
 
     <div>
