--- a/index3.html
+++ b/index3.html
@@ -55,14 +55,14 @@
 </head>
 <body>
     <div class="text-blue">
-        <h1>Obama Gamings представляет!</h1>
+        <h1>Obuma Gamings представляет!</h1>
     </div>
 	<a href="index.html">
-	    Страница build 0.1
+	    Stranded Fishing VI build 0.1
 	</a>
 	
 	<a href="index2.html">
-	    Страница build 0.2
+	    Stranded Fishing VI build 0.2
 	</a>
 
     <div class="simple-text">
@@ -70,7 +70,7 @@
     </div>
 
     <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.3.rar" download class="download-link">
-        Rybalka билд 0.3
+        Stranded Fishing VI билд 0.3
     </a>
 
 
@@ -108,11 +108,11 @@
     </div>
 
     <div class="text-small">
-        При поддержке ООО Obama Gamings Corp.
+        При поддержке ООО Obuma Gamings Corp.
     </div>
 	
 	<a href="obama.html">
-	    Официальная страница Obama Gamings Corporation
+	    Официальная страница Obuma Gamings Corporation
 	</a>
 
     <div>
