--- a/victoBuilds.html
+++ b/victoBuilds.html
@@ -17,17 +17,19 @@
 <body>
     <div class="simple-text">
 	    <h1>
-	        Лучшие билды
+	        Victo builds
 		</h1>
+		<br>
 	</div>
 	<div class="download">
         <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/victoBuild.rar" download class="download-link">
-            Rybalka VictoBuild
+            Stranded Fishing VI VictoBuild
         </a>
     </div>
 	<div class="obama">
+	    <br><br>
 	    <p>
-            При поддержке ООО Obama Gamings Corp.
+            При поддержке ООО Obuma Gamings Corp.
 		</p>
     </div>
 </body>
