--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Obuma Gamings</title>
+    <title>Obama Gamings</title>
     <style>
-        /* Подключение шрифта */
         @font-face {
             font-family: 'Scabber';
             src: url('static/Scabber.ttf') format('truetype');
@@ -16,31 +15,36 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
+
+            display: flex;
+            justify-content: center;   /* центр по горизонтали */
+            align-items: center;       /* центр по вертикали */
+            min-height: 100vh;         /* растягиваем на полный экран */
             margin: 0;
-            color: white;
-            font-family: 'Scabber', sans-serif;
+            text-align: center;        /* центрируем текст */
         }
 
-        /* Контейнер для выравнивания по центру */
+        /* Центрируем содержимое */
         .container {
-            max-width: 900px;
-            margin: 0 auto;
-            text-align: center;
+            background: rgba(0, 0, 0, 0.5);  /* затемнение для читаемости (можно убрать) */
             padding: 20px;
+            border-radius: 10px;
+            max-width: 800px;
         }
 
-        .text-blue {
+        .text-blue{
             font-size: 30px;
             color: rgb(0, 50, 0);
+            font-family: 'Scabber';
             margin: 20px 0;
         }
 
-        .download, .simple-text {
+        .download, .simple-text{
             font-size: 25px;
             margin: 10px 0;
         }
 
-        .text-small {
+        .text-small{
             font-size: 18px;
             margin: 20px 0;
         }
@@ -49,17 +53,6 @@
             max-width: 80%;
             height: auto;
             margin: 10px 0;
-            border-radius: 10px;
-        }
-
-        a {
-            color: white;
-            font-size: 22px;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
         }
 
         a.download-link {
@@ -69,12 +62,15 @@
             padding: 10px 20px;
             border-radius: 5px;
             font-weight: bold;
-            display: inline-block;
-            margin: 10px 0;
         }
 
         .download-link:hover {
             background-color: #45a049;
+        }
+
+        a {
+            color: white;
+            font-size: 20px;
         }
     </style>
 </head>
@@ -82,7 +78,7 @@
     <div class="container">
 
         <div class="text-blue">
-            <h1>Obuma Gamings представляет!</h1>
+            <h1>Obama Gamings представляет!</h1>
         </div>
 
         <a href="victoBuilds.html">Victo билды</a>
@@ -90,35 +86,34 @@
         <div class="simple-text">Скачать игру:</div>
 
         <div class="download">
-            <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.1.rar" 
-               download class="download-link">
-               Stranded Fishing VI билд 0.1
+            <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.1.rar" download class="download-link">
+                Ultimate Fishing VI билд 0.1
             </a>
         </div>
 
-        <a href="index2.html">Страница Stranded Fishing VI build 0.2</a>
+        <a href="index2.html">Страница Ultimate Fishing VI build 0.2</a>
 
         <div class="simple-text"><p>О нашей игре:</p></div>
 
         <div class="simple-text">Красивые виды</div>
-        <img src="static/images/img1.png" alt="Красивые виды">
+        <img src="static/images/img1.png">
 
         <div class="simple-text">Проработанные модели</div>
-        <img src="static/images/img2.png" alt="Проработанные модели">
+        <img src="static/images/img2.png">
 
         <div class="simple-text">Проработанная физика</div>
-        <img src="static/images/img3.png" alt="Проработанная физика">
+        <img src="static/images/img3.png">
 
         <div class="simple-text">Глубокий сюжет</div>
-        <img src="static/images/img4.png" alt="Глубокий сюжет">
+        <img src="static/images/img4.png">
 
         <div class="text-small">
-            При поддержке ООО Obuma Gamings Corp.
+            При поддержке ООО Obama Gamings Corp.
         </div>
 
-        <a href="obama.html">Официальная страница Obuma Gamings Corporation</a>
+        <a href="obama.html">Официальная страница Obama Gamings Corporation</a>
 
-        <img src="static/images/ObamaImage.jpg" alt="Obuma Gamings Logo">
+        <img src="static/images/ObamaImage.jpg">
 
     </div>
 </body>
