--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="container">
 
         <div class="text-blue">
-            <h1>Obama Gamings представляет!</h1>
+            <h1>Obuma Gamings представляет!</h1>
         </div>
 
         <a href="victoBuilds.html">Victo билды</a>
@@ -87,11 +87,11 @@
 
         <div class="download">
             <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.1.rar" download class="download-link">
-                Ultimate Fishing VI билд 0.1
+                Stranded Fishing VI 0.1
             </a>
         </div>
 
-        <a href="index2.html">Страница Ultimate Fishing VI build 0.2</a>
+        <a href="index2.html">Страница Stranded Fishing VI build 0.2</a>
 
         <div class="simple-text"><p>О нашей игре:</p></div>
 
@@ -108,10 +108,10 @@
         <img src="static/images/img4.png">
 
         <div class="text-small">
-            При поддержке ООО Obama Gamings Corp.
+            При поддержке ООО Obuma Gamings Corp.
         </div>
 
-        <a href="obama.html">Официальная страница Obama Gamings Corporation</a>
+        <a href="obama.html">Официальная страница Obuma Gamings Corporation</a>
 
         <img src="static/images/ObamaImage.jpg">
 
