--- a/index.html
+++ b/index.html
@@ -9,24 +9,23 @@
             src: url('static/Scabber.ttf') format('truetype');
         }
 
-        /* Фон сайта */
         body {
-            background-image: url('dog.jpg');
+            background-image: url('static/images/cover.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
 
             display: flex;
-            justify-content: center;   /* центр по горизонтали */
-            align-items: center;       /* центр по вертикали */
-            min-height: 100vh;         /* растягиваем на полный экран */
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
             margin: 0;
-            text-align: center;        /* центрируем текст */
+            text-align: center;
         }
 
-        /* Центрируем содержимое */
+
         .container {
-            background: rgba(0, 0, 0, 0.5);  /* затемнение для читаемости (можно убрать) */
+            background: rgba(0, 0, 0, 0.5);
             padding: 20px;
             border-radius: 10px;
             max-width: 800px;
