--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
         body {
             background-image: url('static/images/cover.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
+            background-size: cover;          /* покрывает весь экран, сохраняя пропорции */
+            background-position: center;     /* центрируем картинку */
+            background-repeat: no-repeat;    /* не повторяем */
 
             display: flex;
             justify-content: center;
@@ -22,7 +22,6 @@
             margin: 0;
             text-align: center;
         }
-
 
         .container {
             background: rgba(0, 0, 0, 0.5);
