--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
         body {
             background-image: url('static/images/cover.jpg');
-            background-size: cover;          /* покрывает весь экран, сохраняя пропорции */
-            background-position: center;     /* центрируем картинку */
-            background-repeat: no-repeat;    /* не повторяем */
+            background-size: contain;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
             margin: 0;
+            min-height: 100vh;
+            display: block;       
             text-align: center;
         }
+
 
         .container {
             background: rgba(0, 0, 0, 0.5);
