--- a/index2.html
+++ b/index2.html
@@ -78,7 +78,7 @@
     <div class="container">
 
         <div class="text-blue">
-            <h1>Obuma Gamings представляет!</h1>
+            <h1>Mural Game представляет!</h1>
         </div>
 
         <a href="victoBuilds.html">Victo билды</a>
@@ -86,7 +86,7 @@
         <div class="simple-text">Скачать игру:</div>
 
         <div class="download">
-            <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.2.rar" download class="download-link">
+            <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.2.rar.torrent" download class="download-link">
                 Stranded Fishing VI 0.2
             </a>
         </div>
@@ -108,10 +108,10 @@
         <img src="static/images/img4.png">
 
         <div class="text-small">
-            При поддержке ООО Obuma Gamings Corp.
+            При поддержке ООО Mural Game Soft.
         </div>
 
-        <a href="obama.html">Официальная страница Obuma Gamings Corporation</a>
+        <a href="obama.html">Официальная страница Mural Game Software</a>
 
         <img src="static/images/ObamaImage.jpg">
 
