--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
         }
 
         body {
-            background-image: url('static/images/cover.jpg');
-            background-size: contain;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
+			background-image: url('static/images/cover.jpg');
+			background-size: cover;       /* растягивает картинку на весь экран */
+			background-position: center;  /* центрирует */
+			background-repeat: no-repeat; /* убирает повтор */
+			background-attachment: fixed; /* фиксирует при скролле */
+			margin: 0;
+			min-height: 100vh;
+		}
 
-            margin: 0;
-            min-height: 100vh;
-            display: block;       
-            text-align: center;
-        }
 
 
         .container {
@@ -53,18 +51,25 @@
             margin: 10px 0;
         }
 
-        a.download-link {
-            text-decoration: none;
-            color: white;
-            background-color: #4CAF50;
-            padding: 10px 20px;
-            border-radius: 5px;
-            font-weight: bold;
-        }
+        .button {
+			display: inline-block;       /* чтобы выглядело как кнопка */
+			padding: 12px 24px;          /* внутренние отступы */
+		font-size: 20px;             /* размер текста */
+		font-weight: bold;           /* жирный текст */
+		color: #fff;                 /* белый текст */
+		background-color: #4CAF50;   /* зелёный фон */
+		border: none;                /* убираем рамку */
+		border-radius: 8px;          /* скруглённые углы */
+		text-decoration: none;       /* убираем подчёркивание */
+		cursor: pointer;             /* курсор-рука */
+		transition: background-color 0.3s ease, transform 0.2s ease;
+	}
 
-        .download-link:hover {
-            background-color: #45a049;
-        }
+	.button:hover {
+		background-color: #45a049;   /* чуть темнее при наведении */
+		transform: scale(1.05);      /* лёгкое увеличение */
+	}
+
 
         a {
             color: white;
@@ -76,18 +81,18 @@
     <div class="container">
 
         <div class="text-blue">
-            <h1>Obuma Gamings представляет!</h1>
+            <h1>Mural Game представляет!</h1>
         </div>
 
         <a href="victoBuilds.html">Victo билды</a>
 
         <div class="simple-text">Скачать игру:</div>
 
-        <div class="download">
-            <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.1.rar" download class="download-link">
-                Stranded Fishing VI 0.1
-            </a>
-        </div>
+        <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.1.rar.torrent" 
+			download 
+			class="button">	
+			Скачать Stranded Fishing VI 0.1
+		</a>
 
         <a href="index2.html">Страница Stranded Fishing VI build 0.2</a>
 
@@ -106,10 +111,10 @@
         <img src="static/images/img4.png">
 
         <div class="text-small">
-            При поддержке ООО Obuma Gamings Corp.
+            При поддержке ООО Mural Game Soft.
         </div>
 
-        <a href="obama.html">Официальная страница Obuma Gamings Corporation</a>
+        <a href="obama.html">Официальная страница Mural Game Software</a>
 
         <img src="static/images/ObamaImage.jpg">
 
