--- a/index2.html
+++ b/index2.html
@@ -47,6 +47,7 @@
         .text-small{
             font-size: 18px;
             margin: 20px 0;
+			color: rgb(255, 255, 255,);
         }
 
         img {
