Messi gavno Ranalda pushka

--- a/index.html
+++ b/index.html
@@ -2,128 +2,52 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Obama Gamings</title>
+    <title>Mural Game Soft.</title>
     <style>
-        @font-face {
+		@font-face {
             font-family: 'Scabber';
             src: url('static/Scabber.ttf') format('truetype');
         }
-
-        body {
-			display: flex;
-			justify-content: center; /* центр по горизонтали */
-			align-items: center;     /* центр по вертикали */
-			min-height: 100vh;
-			margin: 0;
-			background-image: url('static/images/cover.jpg');
-			background-size: cover;
-			background-position: center;
-			background-repeat: no-repeat;
-			background-attachment: fixed;
+		
+		p {
+			font-size: 30px;
+			color: rgb(0, 0, 0);
 		}
+		
+		body {
+            background-image: url('dog.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
 
-
-
-
-        .container {
-			background: rgba(0, 0, 0, 0.5);
-			padding: 20px;
-			border-radius: 10px;
-			max-width: 800px;
-			margin: 0 auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;    
+            min-height: 100vh;      
+            margin: 0;
+            text-align: center;     
+        }
+		
+		.main-text {
+			font-size: 30px;
+			color: rgb(0, 50, 0);
+			font-family: 'Scabber';
 		}
-
-
-        .text-blue{
-            font-size: 30px;
-            color: rgb(0, 50, 0);
-            font-family: 'Scabber';
-            margin: 20px 0;
-        }
-
-        .download, .simple-text{
-            font-size: 25px;
-            margin: 10px 0;
-        }
-
-        .text-small{
-            font-size: 18px;
-            margin: 20px 0;
-        }
-
-        img {
-            max-width: 80%;
-            height: auto;
-            margin: 10px 0;
-        }
-
-        .button {
-			display: inline-block;       
-			padding: 12px 24px;
-			font-size: 20px;
-			font-weight: bold;
-			color: #fff;
-			background-color: #4CAF50;
-			border: none;
-			border-radius: 8px;
-			text-decoration: none;
-			cursor: pointer;
-			transition: background-color 0.3s ease, transform 0.2s ease;
-		}
-
-		.button:hover {
-			background-color: #45a049;   /* чуть темнее при наведении */
-			transform: scale(1.05);      /* лёгкое увеличение */
-		}
-
-
-        a {
-            color: white;
-            font-size: 20px;
-        }
     </style>
 </head>
 <body>
-    <div class="container">
+	<div class="main-text">
+		<h1>
+			Mural Game Soft.
+		</h1>
+	</div>
 
-        <div class="text-blue">
-            <h1>Mural Game представляет!</h1>
-        </div>
-
-        <a href="victoBuilds.html">Victo билды</a>
-
-        <div class="simple-text">Скачать игру:</div>
-
-        <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.1.rar.torrent" 
-			download 
-			class="button">	
-			Скачать Stranded Fishing VI 0.1
-		</a>
-
-        <a href="index2.html">Страница Stranded Fishing VI build 0.2</a>
-
-        <div class="simple-text"><p>О нашей игре:</p></div>
-
-        <div class="simple-text">Красивые виды</div>
-        <img src="static/images/img1.png">
-
-        <div class="simple-text">Проработанные модели</div>
-        <img src="static/images/img2.png">
-
-        <div class="simple-text">Проработанная физика</div>
-        <img src="static/images/img3.png">
-
-        <div class="simple-text">Глубокий сюжет</div>
-        <img src="static/images/img4.png">
-
-        <div class="text-small">
-            При поддержке ООО Mural Game Soft.
-        </div>
-
-        <a href="obama.html">Официальная страница Mural Game Software</a>
-
-        <img src="static/images/ObamaImage.jpg">
-
-    </div>
+    <div>
+		<br><br><br>
+		
+		<p>
+			я тронул дерьмо в бассейне центрального парка
+		</p>
+	</div>
 </body>
 </html>
