--- a/obama.html
+++ b/obama.html
@@ -32,12 +32,12 @@
 <body>
     <div class="obama-text">
 	    <h1>
-		    Obuma Gamings corp.
+		    Mural Game Software
 		</h1>
 	</div>
 	
 	<div class="img-people">
-        <img src="static/images/ObamaImage.jpg" alt="Obama Gamings Logo">
+        <img src="static/images/Mural.png" alt="Obama Gamings Logo">
 		<br>
 	</div>
 	
@@ -77,6 +77,15 @@
 	<div class="img-people">
         <img src="static/images/obamaPage1.jpg" alt="obama1">
     </div>
+	
+	<div class="simple-text">
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	    <p>А Игорь отлынивает!</p>
+	</div>
+	
+	<div class="img-people">
+		<img src="static/images/obuma.jpg">
+	</div>
 
 </body>
 </html>
