--- a/RybalkaIndex1.html
+++ b/RybalkaIndex1.html
@@ -92,7 +92,7 @@
             </a>
         </div>
 
-        <a href="index2.html">Страница Stranded Fishing VI build 0.2</a>
+        <a href="RybalkaIndex2.html">Страница Stranded Fishing VI build 0.2</a>
 
         <div class="simple-text"><p>О нашей игре:</p></div>
 
@@ -114,7 +114,7 @@
 
         <a href="obama.html">Официальная страница Mural Game Software</a>
 
-        <img src="static/images/ObamaImage.jpg">
+        <img src="static/images/Mural.png">
 
     </div>
 </body>
