Messi gavno Ranalda pushka

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     </style>
 </head>
 <body>
+	<a href="RybalkaIndex1.html">Страница Stranded Fishing VI build 0.1</a>
+
 	<div class="main-text">
 		<h1>
 			Mural Game Soft.
