--- a/RybalkaIndex3.html
+++ b/RybalkaIndex3.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="text-blue">
-        <h1>Obuma Gamings представляет!</h1>
+        <h1>Mural games представляет!</h1>
     </div>
 	<a href="index.html">
 	    Stranded Fishing VI build 0.1
@@ -69,54 +69,68 @@
         Скачать игру:
     </div>
 
-    <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.3.rar" download class="download-link">
+    <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/build_3.rar" download class="download-link">
         Stranded Fishing VI билд 0.3
     </a>
 
 
 
     <div class="simple-text">
-        <p>О нашей игре:</p>
+        <p>О новвоведениях:</p>
     </div>
 
     <div class="simple-text">
-        Красивые виды
+        Добавлено больше опасностей
     </div>
     <div>
-        <img src="static/images/build2_img2.png" alt="Красивые виды">
+        <img src="static/images/build3_img1.png" alt="Красивые виды">
     </div>
 
     <div class="simple-text">
-        Добавлена урановая шахта
+        Добавлена угольная промышленность
     </div>
     <div>
-        <img src="static/images/build2_img3.png" alt="Проработанные модели">
+        <img src="static/images/build3_img2.png" alt="Проработанные модели">
     </div>
 
     <div class="simple-text">
-        Проработанная физика
+        Глубокий сюжет
     </div>
     <div>
-        <img src="static/images/build2_img1.png" alt="Проработанная физика">
+        <img src="static/images/build3_img3.png" alt="Проработанная физика">
     </div>
 
     <div class="simple-text">
         Вкусная рыба
     </div>
     <div>
-        <img src="static/images/build2_img4.png" alt="Глубокий сюжет">
+        <img src="static/images/build3_img4.png" alt="Глубокий сюжет">
+    </div>
+	
+	<div class="simple-text">
+        Добавлен торговец Артемий
+    </div>
+    <div>
+        <img src="static/images/build3_img5.png" alt="Cabaka">
+    </div>
+	
+	<div class="simple-text">
+        Самая инновационная система "motion capture" в сыптывкаровском округе
+    </div>
+    <div>
+        <img src="static/images/build3_img6.png" alt="Cabaka">
     </div>
 
     <div class="text-small">
-        При поддержке ООО Obuma Gamings Corp.
+        При поддержке ООО Mural Game Soft.
     </div>
 	
 	<a href="obama.html">
-	    Официальная страница Obuma Gamings Corporation
+	    Официальная страница Mural Game Software
 	</a>
 
     <div>
-        <img src="static/images/ObamaImage.jpg" alt="Obama Gamings Logo">
+        <img src="static/images/Mural.png" alt="Mural Logo">
     </div>
 </body>
 </html>
